--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ Description: Fit a variety of latent variable models, including confirmatory
    factor analysis, structural equation modeling and latent growth curve models.
 Depends: R(>= 3.1.0)
 Imports: methods, stats4, stats, utils, graphics, MASS, 
-         mnormt, pbivnorm, numDeriv,
+         mnormt, pbivnorm, numDeriv, GenSA, ggplot2, data.table, dplyr, tidyr,
 Suggests: testthat
 License: GPL (>= 2)
 LazyData: yes
